fixes wrong spacing
SRFCMSAL-1706

--- a/source/_patterns/10-atoms/text/teaser-info.scss
+++ b/source/_patterns/10-atoms/text/teaser-info.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.teaser-info-innerwrapper {
+  line-height: 1;
+}
+
 .teaser-info {
   position: relative;
   margin-right: 18px;
